--- a/Labo02/001_RDS.md
+++ b/Labo02/001_RDS.md
@@ -13,15 +13,58 @@ for reference. Once you have read the document, please perform the following ste
 ### [Delete current private subnet](https://awscli.amazonaws.com/v2/documentation/api/latest/reference/ec2/delete-subnet.html)
 
 ```bash
-[INPUT]
+aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
 ```
+
+```
+{
+    "Subnets": [
+        {
+            "AvailabilityZone": "eu-west-3a",
+            "AvailabilityZoneId": "euw3-az1",
+            "AvailableIpAddressCount": 10,
+            "CidrBlock": "10.0.7.0/28",
+            "DefaultForAz": false,
+            "MapPublicIpOnLaunch": false,
+            "MapCustomerOwnedIpOnLaunch": false,
+            "State": "available",
+            "SubnetId": "subnet-0764f7c8e098ba628",
+            "VpcId": "vpc-03d46c285a2af77ba",
+            "OwnerId": "709024702237",
+            "AssignIpv6AddressOnCreation": false,
+            "Ipv6CidrBlockAssociationSet": [],
+            "Tags": [
+                {
+                    "Key": "Name",
+                    "Value": "SUB-PRIVATE-DEVOPSTEAM07"
+                }
+            ],
+            "SubnetArn": "arn:aws:ec2:eu-west-3:709024702237:subnet/subnet-0764f7c8e098ba628",
+            "EnableDns64": false,
+            "Ipv6Native": false,
+            "PrivateDnsNameOptionsOnLaunch": {
+                "HostnameType": "ip-name",
+                "EnableResourceNameDnsARecord": false,
+                "EnableResourceNameDnsAAAARecord": false
+            }
+        }
+    ]
+}
+```
+Once you have identified the subnet, use the following command to delete it:
 
 ```bash
-[INPUT]
-//describe subnet (to check if always available)
-
-[OUTPUT]
+aws ec2 delete-subnet --subnet-id subnet-0764f7c8e098ba628
 ```
+Proof that the subnet has been deleted
+```bash
+aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
+```
+```bash
+An error occurred (InvalidSubnetID.NotFound) when calling the DescribeSubnets operation: The subnet ID 'subnet-0764f7c8e098ba628' does not exist
+```
+
+
 
 ### [Create your subnets](https://awscli.amazonaws.com/v2/documentation/api/latest/reference/ec2/create-subnet.html)
 
