--- a/Labo02/001_RDS.md
+++ b/Labo02/001_RDS.md
@@ -78,14 +78,63 @@ An error occurred (InvalidSubnetID.NotFound) when calling the DescribeSubnets op
 
 ```bash
 [INPUT]
+aws ec2 create-subnet --vpc-id vpc-03d46c285a2af77ba --cidr-block 10.0.7.0/28 --availability-zone eu-west-3a
 //create subnet A
 [OUTPUT]
+{
+    "Subnet": {
+        "AvailabilityZone": "eu-west-3a",
+        "AvailabilityZoneId": "euw3-az1",
+        "AvailableIpAddressCount": 11,
+        "CidrBlock": "10.0.7.0/28",
+        "DefaultForAz": false,
+        "MapPublicIpOnLaunch": false,
+        "State": "available",
+        "SubnetId": "subnet-013e922d28dc16192",
+        "VpcId": "vpc-03d46c285a2af77ba",
+        "OwnerId": "709024702237",
+        "AssignIpv6AddressOnCreation": false,
+        "Ipv6CidrBlockAssociationSet": [],
+        "SubnetArn": "arn:aws:ec2:eu-west-3:709024702237:subnet/subnet-013e922d28dc16192",
+        "EnableDns64": false,
+        "Ipv6Native": false,
+        "PrivateDnsNameOptionsOnLaunch": {
+            "HostnameType": "ip-name",
+            "EnableResourceNameDnsARecord": false,
+            "EnableResourceNameDnsAAAARecord": false
+        }
+    }
+}
 ```
 
 ```bash
-[INPUT]
+aws ec2 create-subnet --vpc-id vpc-03d46c285a2af77ba --cidr-block 10.0.7.128/28 --availability-zone eu-west-3b
 //create subnet B
 [OUTPUT]
+{
+    "Subnet": {
+        "AvailabilityZone": "eu-west-3b",
+        "AvailabilityZoneId": "euw3-az2",
+        "AvailableIpAddressCount": 11,
+        "CidrBlock": "10.0.7.128/28",
+        "DefaultForAz": false,
+        "MapPublicIpOnLaunch": false,
+        "State": "available",
+        "SubnetId": "subnet-0ce0d90738ee34415",
+        "VpcId": "vpc-03d46c285a2af77ba",
+        "OwnerId": "709024702237",
+        "AssignIpv6AddressOnCreation": false,
+        "Ipv6CidrBlockAssociationSet": [],
+        "SubnetArn": "arn:aws:ec2:eu-west-3:709024702237:subnet/subnet-0ce0d90738ee34415",
+        "EnableDns64": false,
+        "Ipv6Native": false,
+        "PrivateDnsNameOptionsOnLaunch": {
+            "HostnameType": "ip-name",
+            "EnableResourceNameDnsARecord": false,
+            "EnableResourceNameDnsAAAARecord": false
+        }
+    }
+}
 ```
 
 ### [Create your security groups](https://awscli.amazonaws.com/v2/documentation/api/latest/reference/ec2/create-security-group.html)
