--- a/Labo02/001_RDS.md
+++ b/Labo02/001_RDS.md
@@ -17,6 +17,7 @@ aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
 ```
 
 ```
+[OUTPUT]
 {
     "Subnets": [
         {
@@ -61,6 +62,7 @@ Proof that the subnet has been deleted
 aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
 ```
 ```bash
+[OUTPUT]
 An error occurred (InvalidSubnetID.NotFound) when calling the DescribeSubnets operation: The subnet ID 'subnet-0764f7c8e098ba628' does not exist
 ```
 
@@ -147,8 +149,49 @@ aws ec2 create-subnet --vpc-id vpc-03d46c285a2af77ba --cidr-block 10.0.7.128/28 
 
 ```bash
 [INPUT]
-
+aws ec2 create-security-group --group-name "SG-PRIVATE-DRUPAL-DEVOPSTEAM07-RDS" --description "Security group for RDS" --vpc-id vpc-03d46c285a2af77ba
 [OUTPUT]
+{
+    "GroupId": "sg-09dea6fed50f5d83c"
+}
+```
+
+```bash
+[INPUT]
+aws ec2 authorize-security-group-ingress --group-id sg-09dea6fed50f5d83c --protocol tcp --port 3306 --cidr 10.0.7.0/28
+
+aws ec2 authorize-security-group-ingress --group-id sg-09dea6fed50f5d83c --protocol tcp --port 3306 --cidr 10.0.7.128/28
+[OUTPUT]
+{
+    "Return": true,
+    "SecurityGroupRules": [
+        {
+            "SecurityGroupRuleId": "sgr-033d922a3feaf00e8",
+            "GroupId": "sg-09dea6fed50f5d83c",
+            "GroupOwnerId": "709024702237",
+            "IsEgress": false,
+            "IpProtocol": "tcp",
+            "FromPort": 3306,
+            "ToPort": 3306,
+            "CidrIpv4": "10.0.7.0/28"
+        }
+    ]
+}
+{
+    "Return": true,
+    "SecurityGroupRules": [
+        {
+            "SecurityGroupRuleId": "sgr-0c11f4f3ae3366222",
+            "GroupId": "sg-09dea6fed50f5d83c",
+            "GroupOwnerId": "709024702237",
+            "IsEgress": false,
+            "IpProtocol": "tcp",
+            "FromPort": 3306,
+            "ToPort": 3306,
+            "CidrIpv4": "10.0.7.128/28"
+        }
+    ]
+}
 ```
 
 ### [Deploy your instance based on your own AMI inside the subnet A](https://docs.aws.amazon.com/cli/latest/userguide/cli-services-ec2-instances.html)
