--- a/Labo02/001_RDS.md
+++ b/Labo02/001_RDS.md
@@ -379,6 +379,44 @@ mysqld  Ver 11.2.3-MariaDB for Linux on x86_64 (Source distribution)
 |VPC|VPC-CLD|
 |SubnetIds|Both private subnets|
 
+
+```bash
+[INPUT]
+aws rds create-db-subnet-group --db-subnet-group-name DBSUBGRP-DEVOPSTEAM07 --db-subnet-group-description "DBSUBGRP-DEVOPSTEAM07" --subnet-ids "[\"subnet-0ce0d90738ee34415\", \"subnet-013e922d28dc16192\"]"
+[OUTPUT]
+{
+    "DBSubnetGroup": {
+        "DBSubnetGroupName": "dbsubgrp-devopsteam07",
+        "DBSubnetGroupDescription": "DBSUBGRP-DEVOPSTEAM07",
+        "VpcId": "vpc-03d46c285a2af77ba",
+        "SubnetGroupStatus": "Complete",
+        "Subnets": [
+            {
+                "SubnetIdentifier": "subnet-013e922d28dc16192",
+                "SubnetAvailabilityZone": {
+                    "Name": "eu-west-3a"
+                },
+                "SubnetOutpost": {},
+                "SubnetStatus": "Active"
+            },
+            {
+                "SubnetIdentifier": "subnet-0ce0d90738ee34415",
+                "SubnetAvailabilityZone": {
+                    "Name": "eu-west-3b"
+                },
+                "SubnetOutpost": {},
+                "SubnetStatus": "Active"
+            }
+        ],
+        "DBSubnetGroupArn": "arn:aws:rds:eu-west-3:709024702237:subgrp:dbsubgrp-devopsteam07",
+        "SupportedNetworkTypes": [
+            "IPV4"
+        ]
+    }
+}
+```
+
+
 ### [Create RDS](https://awscli.amazonaws.com/v2/documentation/api/latest/reference/rds/index.html)
 
 * [Supported MariaDb Version on RDS](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/MariaDB.Concepts.VersionMgmt.html)
