--- a/Labo02/001_RDS.md
+++ b/Labo02/001_RDS.md
@@ -598,7 +598,28 @@ MariaDB [(none)]>
   uncheck the **Free Usage Tier** checkbox at the top.)
 
 ```
-//TODO
+Two EC2 :
+2 EC2 t3a.micro machines / vCPU = 2 / Memory = 1GiB / Network Performance = Up to 5 Gigabit / Storage = EBS only / hourly cost on demand = 0.0106 USD
+Region : Paris
+Location : Shared Instances
+OS : Linux
+Workload : Constant use
+Payment method : Compute savings Plans => reservation conditions = 3 years / payment method = No upfront costs
+Storage for each EC2 instance : General purpose SSD (gp3) / 10 GB sotkcage qty
+
+Price per month = 10.91 USD
+
+One RDS :
+1 RDS db.t3.micro / vCPU = 2 / memory = 1 GiB
+Utilization: 100 Utilized/Month / deployment selection = Multi-AZ / pricing model = On demand
+Proxy : no
+Storage: GP3 20 GB
+Retention period for performance analyses: 7 days (free)
+
+Price per month = 33.06 USD
+
+Total :
+Total price per month 40.97 USD
 ```
 
 * In a two-tier architecture the web application and the database are
