--- a/Labo02/001_RDS.md
+++ b/Labo02/001_RDS.md
@@ -13,6 +13,7 @@ for reference. Once you have read the document, please perform the following ste
 ### [Delete current private subnet](https://awscli.amazonaws.com/v2/documentation/api/latest/reference/ec2/delete-subnet.html)
 
 ```bash
+[INPUT]
 aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
 ```
 
@@ -56,10 +57,12 @@ aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
 Once you have identified the subnet, use the following command to delete it:
 
 ```bash
+[INPUT]
 aws ec2 delete-subnet --subnet-id subnet-0764f7c8e098ba628
 ```
 Proof that the subnet has been deleted
 ```bash
+[INPUT]
 aws ec2 describe-subnets --subnet-ids subnet-0764f7c8e098ba628
 ```
 ```bash
@@ -114,6 +117,7 @@ aws ec2 create-subnet --vpc-id vpc-03d46c285a2af77ba --cidr-block 10.0.7.0/28 --
 [INPUT]
 aws ec2 create-subnet --vpc-id vpc-03d46c285a2af77ba --cidr-block 10.0.7.128/28 --availability-zone eu-west-3b
 //create subnet B
+
 [OUTPUT]
 {
     "Subnet": {
@@ -152,6 +156,7 @@ aws ec2 create-subnet --vpc-id vpc-03d46c285a2af77ba --cidr-block 10.0.7.128/28 
 ```bash
 [INPUT]
 aws ec2 create-security-group --group-name "SG-PRIVATE-DRUPAL-DEVOPSTEAM07-RDS" --description "Security group for RDS" --vpc-id vpc-03d46c285a2af77ba
+
 [OUTPUT]
 {
     "GroupId": "sg-09dea6fed50f5d83c"
@@ -359,10 +364,12 @@ Host key verification failed.
 Modification obligatoire du fichier C:Users\faxiz/.ssh/known_hosts où nous avons supprimé la dernière ligne localhost avec le port 2223.
 
 ```bash
+[INPUT]
 mysqld --version
 ```
 
 ```bash
+[OUTPUT]
 mysqld: Deprecated program name. It will be removed in a future release, use '/opt/bitnami/mariadb/sbin/mariadbd' instead
 mysqld  Ver 11.2.3-MariaDB for Linux on x86_64 (Source distribution)
 ```
@@ -575,6 +582,7 @@ aws rds describe-db-instances --db-instance-identifier DBI-DEVOPSTEAM07
 ```sql
 [INPUT]
 mysql -h dbi-devopsteam07.cshki92s4w5p.eu-west-3.rds.amazonaws.com -u admin -p
+
 [OUTPUT]
 mysql: Deprecated program name. It will be removed in a future release, use '/opt/bitnami/mariadb/bin/mariadb' instead
 Enter password:
